Changes: * Increment version in source code. * Add sinonjs for test events.

--- a/bower.json
+++ b/bower.json
@@ -27,5 +27,8 @@
     "type": "git",
     "url": "http://victor-valencia.github.io/bootstrap-iconpicker"
   },
-  "main": "bootstrap-iconpicker/"
+  "main": "bootstrap-iconpicker/",
+  "devDependencies": {
+    "sinonjs": "^1.17.1"
+  }
 }
