--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-iconpicker",
-  "version": "1.8.1",
+  "version": "1.8.0",
   "homepage": "https://victor-valencia.github.com/bootstrap-iconpicker",
   "author": {
     "name": "Victor Valencia Rico",
@@ -18,12 +18,11 @@
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "mocha": "^3.4.2",
-    "opn-cli": "^3.1.0"
+    "mocha": "^3.4.2"
   },
   "scripts": {
     "grunt": "grunt",
     "browser": "index.html",
-    "test": "opn test/index.html"
+    "test": "start test/index.html"
   }
 }
