--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "opn": "^5.1.0"
   },
   "scripts": {
     "browser": "index.html",
