--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "mocha": "^3.4.2",
-    "opn": "^5.1.0"
+    "mocha": "^3.4.2"
   },
   "scripts": {
-    "browser": "index.html",
-    "test": "node --harmony run-test.js"
+    "browser": "index.html"
   }
 }
