* rename folder "bootstrap-iconpicker" to "src". * Include all iconset files in file "bootstrap-iconpicker-iconset-all.js" * add flagicon v2.08 library. * add multiple versions  (v2.0.1, v2.0.2, v2.0.3, v2.0.4, v2.0.5, v2.0.7, v2.0.8 and v2.0.9) of typicons * add CDN for typicons.

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-iconpicker",
   "description": "Simple Iconpicker for Bootstrap 3.x",
-  "version": "1.8.2",
+  "version": "1.9.0",
   "keywords": [
     "Bootstrap",
     "Iconpicker",
@@ -13,7 +13,8 @@
     "Material Design Icons",
     "Octicons",
     "Typicons",
-    "Weather Icons"
+    "Weather Icons",
+    "Flag Icons"
   ],
   "license": "MIT",
   "authers": [
@@ -27,7 +28,7 @@
     "type": "git",
     "url": "http://victor-valencia.github.io/bootstrap-iconpicker"
   },
-  "main": "bootstrap-iconpicker/",
+  "main": "dist",
   "devDependencies": {
     "sinonjs": "^1.17.1"
   }
