Update tags "main" and "ignore" in bower.json

--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,20 @@
     "type": "git",
     "url": "http://victor-valencia.github.io/bootstrap-iconpicker"
   },
-  "main": "dist",
+  "main": [
+    "dist/css/bootstrap-iconpicker.css",
+    "dist/js/bootstrap-iconpicker-iconset-all.js",
+    "dist/js/bootstrap-iconpicker.js"
+  ],
+  "ignore": [
+    "/.*",    
+    "bootstrap-iconpicker.png",
+    "index.html",
+    "css",
+    "icons-fonts",
+    "test",
+    "util"
+  ],
   "devDependencies": {
     "sinonjs": "^1.17.1"
   }
