Update tag "ignore" in bower.json

--- a/bower.json
+++ b/bower.json
@@ -34,11 +34,11 @@
   ],
   "ignore": [
     "/.*",
-    "css/*",
-    "icon-fonts",
-    "test",
-    "util",
-    "src",
+    "/css",
+    "/icon-fonts",
+    "/test",
+    "/util",
+    "/src",
     "banner.js",
     "bootstrap-iconpicker.png",
     "gruntfile.js",
